Summary of Changes to DuroDBMS

DuroDBMS 1.8

- Supporting tuple access using the subscript operator. 

- Fixed bug that prevented non-update relation variable arguments from
  being used in LOAD and FOR .. IN.

- Generic relation types are now allowed in operator parameters.

DuroDBMS 1.7

- Added support for FoundationDB as storage engine.

- As part of the support for FoundationDB, added automatic restart of
  failed statements when implicit transactions are enabled.

- As part of the support for FoundationDB, added function RDB_err_retryable()
  and read-only operator retryable() (the latter only being available in Duro D/T)
  to determine whether a failed operation should be restarted.

- Renamed lock_not_granted_error to concurrency_error.

- Fixed problems in ||, upper(), and lower() which could cause the string
  length being set incorrectly.

- Fixed bug that caused the program to crash when sorting using an index.

- Added support for NaN.

DuroDBMS 1.6

- GNU Libtool is no longer required on Windows.

- If POSIX regular expressions are not available, C++ regular expressions are used.

- Moved to Berkeley DB 18.1.

- Fixed bug in storing relations without attributes.

- Fixed bug in expression serialization.

- Fixed bug in secondary indexes of in-memory tables.

DuroDBMS 1.5

- Fixed bug that can cause WRAP to crash.

- Moved to OpenJDK 10.

DuroDBMS 1.4

- Added option to build DuroDBMS without Berkeley DB.

- Moved to Berkeley DB 6.2. (Not on Windows, because DuroDBMS does not work with
  Berkeley DB 6.2 on Windows XP)

- Fixed bug that prevented recreation of a renamed table.

- lower() and upper() convert multibyte characters.

- Fixed bug that caused memory leaks when dropping local variables.

- Fixed bug that made the interpreter crash when trying to access dropped local variables.

- Fixed creation of local tables with multiple keys when an environment is open.

- Fixed problem with updating private tables that could cause a tuple to disappear